# csv2gs

./: .gitignore  README.md  pyproject.toml  setup.cfg
tests/: test_csv2gs.py
