[metadata]
name = example-pkg-alexchevsky
version = 0.0.1
author = Example Author
author_email = alex@alexchevsky.com
description = Upload CSV to Google Sheets from Command Line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/alexchevsky/csv2gs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = csv2gs
packages = find:
python_requires = >=3.6

[options.packages.find]
where = csv2gs